--- a/views/views.xml
+++ b/views/views.xml
@@ -2,9 +2,9 @@
 <odoo>
    <data>
 
-      <record model="ir.ui.view" id="staff_control.list">
-         <field name="name">staff_control list</field>
-         <field name="model">staff_control.staff_control</field>
+      <record model="ir.ui.view" id="idle_control.list">
+         <field name="name">idle_control list</field>
+         <field name="model">idle_control.idle_control</field>
          <field name="arch" type="xml">
             <tree>
                <field name="action" />
@@ -15,9 +15,9 @@
          </field>
       </record>
 
-      <record model="ir.ui.view" id="staff_control.kanban">
-         <field name="name">staff_control kanban</field>
-         <field name="model">staff_control.staff_control</field>
+      <record model="ir.ui.view" id="idle_control.kanban">
+         <field name="name">idle_control kanban</field>
+         <field name="model">idle_control.idle_control</field>
          <field name="arch" type="xml">
             <kanban class="oe_background_grey">
                <field name="id" />
@@ -29,7 +29,7 @@
                   <t t-name="kanban-box">
                      <div t-attf-class="oe_kanban_global_click o_kanban_record_has_image_fill ">
                         <div class="o_kanban_image">
-                           <img alt="Avatar" t-att-src="kanban_image('staff_control.staff_control', 'photo', record.id.raw_value)" />
+                           <img alt="Avatar" t-att-src="kanban_image('idle_control.idle_control', 'photo', record.id.raw_value)" />
                         </div>
                         <div class="oe_kanban_details">
                            <ul>
@@ -55,11 +55,11 @@
          </field>
       </record>
 
-      <record model="ir.ui.view" id="staff_control">
+      <record model="ir.ui.view" id="idle_control">
          <field name="name">staff_control form</field>
          <field name="model">staff_control.staff_control</field>
          <field name="arch" type="xml">
-         <form string="Staff Control">
+         <form string="Idle Control">
             <sheet>
              <div class="oe_button_box" name="button_box">
              </div>
@@ -87,9 +87,9 @@
       </record>
 
       <!-- actions opening views on models -->
-      <record model="ir.actions.act_window" id="staff_control.action_window">
+      <record model="ir.actions.act_window" id="idle_control.action_window">
          <field name="name">Alert</field>
-         <field name="res_model">staff_control.staff_control</field>
+         <field name="res_model">idle_control.idle_control</field>
          <field name="view_mode">kanban,tree,form</field>
       </record>
 
