--- a/views/views.xml
+++ b/views/views.xml
@@ -7,53 +7,14 @@
          <field name="model">idle_control.idle_control</field>
          <field name="arch" type="xml">
             <tree>
-               <field name="action" />
+               <field name="device" />
                <field name="date" />
-               <field name="area" />
+               <field name="duration" />
 <!--               <field name="photos" />-->
             </tree>
          </field>
       </record>
 
-      <record model="ir.ui.view" id="idle_control.kanban">
-         <field name="name">idle_control kanban</field>
-         <field name="model">idle_control.idle_control</field>
-         <field name="arch" type="xml">
-            <kanban class="oe_background_grey">
-               <field name="id" />
-               <field name="action" />
-               <field name="area" />
-               <field name="date" />
-<!--               <field name="photos" />-->
-               <templates>
-                  <t t-name="kanban-box">
-                     <div t-attf-class="oe_kanban_global_click o_kanban_record_has_image_fill ">
-                        <div class="o_kanban_image">
-                           <img alt="Avatar" t-att-src="kanban_image('photo_control.photo_control', 'photo', record.id.raw_value)" />
-                        </div>
-                        <div class="oe_kanban_details">
-                           <ul>
-                              <li class="mb4">
-                                 <strong>
-                                    <field name="action" />
-                                 </strong>
-                              </li>
-                              <li t-if="record.date.raw_value" class="o_text_overflow">
-                                 <field name="date" />
-                              </li>
-                           </ul>
-                           <ul>
-                              <li t-if="record.create_date.raw_value" class="o_text_overflow">
-                                 <field name="create_date" />
-                              </li>
-                           </ul>
-                        </div>
-                     </div>
-                  </t>
-               </templates>
-            </kanban>
-         </field>
-      </record>
 
       <record model="ir.ui.view" id="idle_control">
          <field name="name">idle_control form</field>
@@ -82,7 +43,7 @@
                        <table>
                            <tr>
                                <td>
-                                   <field name="action" required="1" placeholder="Action" style="padding-right:10px"/>
+                                   <field name="device" required="1" placeholder="Action" style="padding-right:10px"/>
                                </td>
                            </tr>
                        </table>
@@ -92,7 +53,7 @@
                   <field name="date"/>
                </group>
                <group>
-                  <field name="area"/>
+                  <field name="duration"/>
                </group>
             </sheet>
          </form>
